deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home
spec:
  replicas: 2
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      labels:
        app: home
    spec:
      containers:
      - name: home
        image: pkhamdee/django-ingress:1.0
        ports:
        - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: home-svc 
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: home        

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: page 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: page
  template:
    metadata:
      labels:
        app: page
    spec:
      containers:
      - name: page
        image: pkhamdee/django-ingress:1.0
        ports:
        - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: page-svc 
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: page
